<resources>
    <string name="app_name">GithubReposApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="repositories">Repositories</string>
    <string name="repository_detail">Repository Detail</string>
    <string name="user_detail">User Detail</string>
    <string name="repo_name">Repo Name</string>
    <string name="owner">Owner</string>
    <string name="forks_count">Forks Count</string>
    <string name="language">Language</string>
    <string name="default_branch">Default Branch Name</string>
    <string name="connection_error">An unexpected error. Please try again later.</string>
    <string name="summary">Summary</string>
    <string name="all_repositories">All Repositories</string>
    <string name="repository_details">Repository Details</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot My Password</string>
    <string name="welcome">Welcome!</string>
    <string name="auth_graph">Authentication Graph</string>
    <string name="home_graph">Home Graph</string>
    <string name="other_graph">Other Graph</string>

</resources>