<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repoDetails"
            type="com.github.repos.domain.model.RepositoryDetails" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivRepoDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription">

        </ImageView>

        <TextView
            android:id="@+id/tvRepoDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/repo_name"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivRepoDetail" />

        <TextView
            android:id="@+id/tvRepoDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{repoDetails.name}"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoDetailTitle" />

        <TextView
            android:id="@+id/tvRepoOwnerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/owner"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoDetailName" />

        <TextView
            android:id="@+id/tvRepoOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{repoDetails.owner.login}"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoOwnerTitle" />

        <TextView
            android:id="@+id/tvRepoForksTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forks_count"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoOwner" />

        <TextView
            android:id="@+id/tvRepoForks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{Integer.toString(repoDetails.forksCount)}"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoForksTitle" />

        <TextView
            android:id="@+id/tvRepoLanguageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/language"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoForks" />

        <TextView
            android:id="@+id/tvRepoLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{repoDetails.language}"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoLanguageTitle" />

        <TextView
            android:id="@+id/tvRepoBranchTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/default_branch"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoLanguage" />

        <TextView
            android:id="@+id/tvRepoBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{repoDetails.defaultBranch}"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tvRepoBranchTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>